Reworked the project to use browserify (CommonJS) instead of RequireJS (AMD)

--- a/jEngine/index.html
+++ b/jEngine/index.html
@@ -2,10 +2,7 @@
 <html>
     <head>
         <title>My Sample Project</title>
-        <!-- data-main attribute tells require.js to load
-            scripts/main.js after require.js loads. -->
-        <script data-main="source/main" src="source/vendor/require.js"></script>
-        <!--<script src="source/build/main-built.js"></script>-->
+        <script src="source/build/game-bundle.js"></script>
     </head>
 <body>
     <h1>My Sample Project</h1>
